--- a/routing/package.json
+++ b/routing/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "pokemon-api",
+  "name": "routing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.4",
+    "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
